css/style.css
body {
  font-size: 1em;
  background-color: #ffffff;
  line-height: normal;
  color: #808080;
}

h1 {
  font-size: 2em;
}

h2 {
  font-size: 1.75em;
}

h3 {
  font-size: 1.5em;
}

p {
  font-size: 1em;
}

a {
  text-decoration: none;
  : ;
  color: #ffffff;
}

a:hover {
  color: blue;
}

nav {
  background-color: rgba(0,0,0,.25);
  float: left;
  position: fixed;
  width: 100%;
}

.logo {
  margin: 20px;
  width: 100px;
}

.large-pic {
  width: 100%;
}

.medium-pic {
  width: 70%;
}

.left, .right {
  float: left;
  width: 50%;
}

.right {
  float: right;
}

ul {
  list-style-type: none;
  float: right;
}

li {
  float: right;
  padding: 30px;
}

article {
  padding-top: 100px;
}

.container {
  margin: 0 auto;
  width: 50%;
}

